--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
-.DS_Store
-.idea
-.vscode
-.env
-
 node_modules
+
+# Output
+.output
+.vercel
+/.svelte-kit
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+.idea
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
