--- a/package.json
+++ b/package.json
@@ -1,37 +1,35 @@
 {
-  "name": "portfolio-1",
-  "version": "1.0.0",
-  "type": "module",
-  "description": "Personal portfolio",
-  "main": "app.js",
-  "scripts": {
-    "build:css": "tailwindcss -i ./public/css/styles.css -o ./public/css/output.css --minify",
-    "watch:css": "tailwindcss -i ./public/css/styles.css -o ./public/css/output.css --watch",
-    "start": "npm run build:css && node app.js",
-    "dev": "concurrently \"npm run watch:css\" \"nodemon app.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/carlosrrdev/portfolio-1.git"
-  },
-  "author": "Carlos Rodriguez",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/carlosrrdev/portfolio-1/issues"
-  },
-  "homepage": "https://github.com/carlosrrdev/portfolio-1#readme",
-  "dependencies": {
-    "autoprefixer": "^10.4.19",
-    "express": "^4.19.2",
-    "express-handlebars": "^7.1.3",
-    "htmx.org": "^2.0.1",
-    "postcss": "^8.4.40",
-    "pug": "^3.0.3",
-    "tailwindcss": "^3.4.7"
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.1.4"
-  }
+	"name": "portfolio-1",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/eslint": "^9.6.0",
+		"eslint": "^9.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.36.0",
+		"globals": "^15.0.0",
+		"prettier": "^3.1.1",
+		"prettier-plugin-svelte": "^3.1.2",
+		"svelte": "^4.2.7",
+		"svelte-check": "^4.0.0",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.0.0",
+		"vite": "^5.0.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.4.4"
+	}
 }
